Crash in HTTP server
Running tracker3 endpoint --http-port 1234 --database /tmp/fo --ontology nepomuk
leads to a crash.
Fetch the published URL http://127.0.0.1:1234/sparql/ to trigger the crash.
Traceback:
#0 g_hash_table_iter_init (iter=0x7ffff4a36828, hash_table=<error reading variable: Cannot access memory at address 0x3b>0x3) at ../glib/ghash.c:1156
#1 0x00007ffff7507e8c in tracker_resource_iterator_init (iter=0x7ffff4a36828, resource=0x6060000800e0)
at ../subprojects/tracker/src/libtracker-sparql/tracker-resource.c:2003
#2 0x00007ffff74e1d2a in push_stack (deserializer=0x60b000042960, resource=0x6060000800e0)
at ../subprojects/tracker/src/libtracker-sparql/tracker-deserializer-resource.c:147
#3 0x00007ffff74e2156 in tracker_deserializer_resource_constructed (object=0x60b000042960)
at ../subprojects/tracker/src/libtracker-sparql/tracker-deserializer-resource.c:183
#4 0x00007ffff7f6708a in g_object_new_internal (class=0x611000030240, params=0x7fffffffa140, n_params=4) at ../gobject/gobject.c:2296
#5 0x00007ffff7f691a3 in g_object_new_internal (n_params=4, params=0x7fffffffa140, class=0x611000030240) at ../gobject/gobject.c:2562
#6 g_object_new_valist (object_type=<optimized out>, first_property_name=<optimized out>, var_args=var_args@entry=0x7fffffffa410)
at ../gobject/gobject.c:2584
#7 0x00007ffff7f6955f in g_object_new (object_type=<optimized out>, first_property_name=<optimized out>) at ../gobject/gobject.c:2057
#8 0x00007ffff74e3ae6 in tracker_deserializer_resource_new (resource=0x6060000800e0, namespaces=0x60600007edc0, graph=0x0)
at ../subprojects/tracker/src/libtracker-sparql/tracker-deserializer-resource.c:475
#9 0x00007ffff74f0853 in http_server_request_cb
(server=0x60600007d4f0, remote_address=0x60600007ed60, path=0x60200004f8f0 "/sparql/", params=0x0, formats=0, request=0x603000059920, user_data=0x60d000010970) at ../subprojects/tracker/src/libtracker-sparql/tracker-endpoint-http.c:303
#10 0x00007ffff775e056 in ffi_call_unix64 () at /lib64/libffi.so.8
#11 0x00007ffff775a5ef in ffi_call_int.lto_priv () at /lib64/libffi.so.8
#12 0x00007ffff775d3fe in ffi_call () at /lib64/libffi.so.8
#16 0x00007ffff7f76268 in <emit signal '0x7ffff60142a0 "request"' on instance ???> (instance=0x60600007d4f0, detailed_signal=0x7ffff60142a0 "request")
at ../gobject/gsignal.c:3716
#13 0x00007ffff7f5d033 in g_cclosure_marshal_generic_va
(closure=<optimized out>, return_value=<optimized out>, instance=<optimized out>, args_list=<optimized out>, marshal_data=<optimized out>, n_params=<optimized out>, param_types=<optimized out>) at ../gobject/gclosure.c:1650
#14 0x00007ffff7f75e85 in _g_closure_invoke_va
(param_types=0x604000045e10, n_params=<optimized out>, args=0x7fffffffabf0, instance=0x60600007d4f0, return_value=0x0, closure=0x60700003ca30)
at ../gobject/gclosure.c:895
#15 signal_emit_valist_unlocked (instance=instance@entry=0x60600007d4f0, signal_id=signal_id@entry=24, detail=0, var_args=var_args@entry=0x7fffffffabf0)
at ../gobject/gsignal.c:3516
#17 0x00007ffff6011d4b in server_callback
(server=0x60d000010f40, message=0x60e000005440, path=0x60200004f6b0 "/sparql/", query=0x0, user_data=0x60600007d4f0)
at ../subprojects/tracker/src/libtracker-sparql/remote/tracker-http-module.c:158
#18 0x00007ffff44adfec in call_handler.part () at /lib64/libsoup-3.0.so.0
Python Exception <class 'gdb.error'>: value has been optimized out